task5/tests/group/output/test8.out
lli: <stdin>:26:24: error: use of undefined value '%-21879'
%t0 = mul i32 %-21880, %-21879
                       ^

